2005-12-03  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC3 release.

2005-12-02  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	* src/Makefile.am:
	Add check and cflags for malloc(0) returning NULL.

2005-11-19  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* xi.pc.in:
	Update pkgconfig files to separate library build-time dependencies
	from application build-time dependencies.

2005-10-18  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for RC1 release.

2005-10-11  Alan Coopersmith  <alan.coopersmith@sun.com>

	* man/Makefile.am: 
	* configure.ac:
	Use sed to put version number in man page
	Add shadow man pages for man pages that document multiple functions.
	
2005-10-05  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* src/Makefile.am:
	Added missing file to EXTRA_DIST

2005-07-08  Keith Packard  <keithp@keithp.com>

	* .cvsignore:
	* man/.cvsignore:
	* src/.cvsignore:
	* src/Makefile.am:
	Add .cvsignore files
	Switch _la_CFLAGS for AM_CFLAGS to clean up directory

2005-05-22  Alan Coopersmith  <alan.coopersmith@sun.com>

	* Makefile.am, src/Makefile.am, man/Makefile.am, configure.ac,
	  COPYING, NEWS, README, AUTHORS, xi.pc.in:
	Initial autotooling.
